hphp/test/quick/int-overflow.php.expectf
int(-9223372036854775808)
int(9223372036854775807)
int(9223372036854775803)
int(8)
int(-2)
int(28)
int(-9223372036854775808)
int(9223372036854775807)
int(9223372036854775807)
int(-9223372036854775808)
float(1.3835058055282E+19)
int(0)
int(2)
int(-9223372036854775808)
int(-9223372036854775808)
int(-9223372036854775808)
int(-9223372036854775808)
int(-9223372036854775807)
int(-9223372036854775807)
int(-9223372036854775808)
int(-9223372036854775807)
int(9223372036854775807)
int(9223372036854775807)
int(-9223372036854775808)
int(9223372036854775807)
int(-9223372036854775808)
int(-9223372036854775808)
int(9223372036854775807)
int(-9223372036854775808)
int(9223372036854775806)
int(9223372036854775806)
int(9223372036854775807)
int(9223372036854775806)
int(-3)
int(-3)
int(-4)
int(-3)
int(-5)
int(-5)
int(-4)
int(-5)
int(1)
int(1)
int(0)
int(1)
int(-1)
int(-1)
int(0)
int(-1)
int(6)
int(6)
int(5)
int(6)
int(4)
int(4)
int(5)
int(4)
Error: Cannot perform pre/post inc/dec on numeric string
string(2) "12"
Error: Cannot perform pre/post inc/dec on numeric string
string(2) "12"
Error: Cannot perform pre/post inc/dec on numeric string
string(2) "12"
Error: Cannot perform pre/post inc/dec on numeric string
string(2) "12"
float(6.2)
float(6.2)
float(5.2)
float(6.2)
float(4.2)
float(4.2)
float(5.2)
float(4.2)
Error: Cannot perform pre/post inc/dec on numeric string
string(3) "1.5"
Error: Cannot perform pre/post inc/dec on numeric string
string(3) "1.5"
Error: Cannot perform pre/post inc/dec on numeric string
string(3) "1.5"
Error: Cannot perform pre/post inc/dec on numeric string
string(3) "1.5"

Notice: Increment on string 'abc' in %s/int-overflow.php on line 62
string(3) "abd"
string(3) "abd"

Notice: Increment on string 'abc' in %s/int-overflow.php on line 66
string(3) "abc"
string(3) "abd"

Notice: Decrement on string 'abc' in %s/int-overflow.php on line 70
string(3) "abc"
string(3) "abc"

Notice: Decrement on string 'abc' in %s/int-overflow.php on line 74
string(3) "abc"
string(3) "abc"
Error: Cannot perform pre/post inc/dec on empty string
string(0) ""
Error: Cannot perform pre/post inc/dec on empty string
string(0) ""
Error: Cannot perform pre/post inc/dec on empty string
string(0) ""
Error: Cannot perform pre/post inc/dec on empty string
string(0) ""
Error: Cannot perform pre/post inc/dec on null
NULL
Error: Cannot perform pre/post inc/dec on null
NULL
NULL
NULL
NULL
NULL
int(-9223372036854775808)
int(-9223372036854775808)
int(-9223372036854775807)
int(9223372036854775807)
int(9223372036854775807)
int(-9223372036854775808)
int(-4)
int(-4)
int(-3)
int(0)
int(0)
int(1)
int(5)
int(5)
int(6)
string(2) "12"
Error: Cannot perform pre/post inc/dec on numeric string
string(2) "12"
float(5.2)
float(5.2)
float(6.2)
string(3) "1.5"
Error: Cannot perform pre/post inc/dec on numeric string
string(3) "1.5"
string(3) "abc"

Notice: Increment on string 'abc' in %s/int-overflow.php on line 82
string(3) "abc"
string(3) "abd"
string(0) ""
Error: Cannot perform pre/post inc/dec on empty string
string(0) ""
NULL
Error: Cannot perform pre/post inc/dec on null
NULL
int(-9223372036854775808)
int(-9223372036854775807)
int(-9223372036854775807)
int(9223372036854775807)
int(-9223372036854775808)
int(-9223372036854775808)
int(-4)
int(-3)
int(-3)
int(0)
int(1)
int(1)
int(5)
int(6)
int(6)
string(2) "12"
Error: Cannot perform pre/post inc/dec on numeric string
string(2) "12"
float(5.2)
float(6.2)
float(6.2)
string(3) "1.5"
Error: Cannot perform pre/post inc/dec on numeric string
string(3) "1.5"
string(3) "abc"

Notice: Increment on string 'abc' in %s/int-overflow.php on line 89
string(3) "abd"
string(3) "abd"
string(0) ""
Error: Cannot perform pre/post inc/dec on empty string
string(0) ""
NULL
Error: Cannot perform pre/post inc/dec on null
NULL
int(-9223372036854775808)
int(-9223372036854775808)
int(9223372036854775807)
int(9223372036854775807)
int(9223372036854775807)
int(9223372036854775806)
int(-4)
int(-4)
int(-5)
int(0)
int(0)
int(-1)
int(5)
int(5)
int(4)
string(2) "12"
Error: Cannot perform pre/post inc/dec on numeric string
string(2) "12"
float(5.2)
float(5.2)
float(4.2)
string(3) "1.5"
Error: Cannot perform pre/post inc/dec on numeric string
string(3) "1.5"
string(3) "abc"

Notice: Decrement on string 'abc' in %s/int-overflow.php on line 96
string(3) "abc"
string(3) "abc"
string(0) ""
Error: Cannot perform pre/post inc/dec on empty string
string(0) ""
NULL
NULL
NULL
int(-9223372036854775808)
int(9223372036854775807)
int(9223372036854775807)
int(9223372036854775807)
int(9223372036854775806)
int(9223372036854775806)
int(-4)
int(-5)
int(-5)
int(0)
int(-1)
int(-1)
int(5)
int(4)
int(4)
string(2) "12"
Error: Cannot perform pre/post inc/dec on numeric string
string(2) "12"
float(5.2)
float(4.2)
float(4.2)
string(3) "1.5"
Error: Cannot perform pre/post inc/dec on numeric string
string(3) "1.5"
string(3) "abc"

Notice: Decrement on string 'abc' in %s/int-overflow.php on line 103
string(3) "abc"
string(3) "abc"
string(0) ""
Error: Cannot perform pre/post inc/dec on empty string
string(0) ""
NULL
NULL
NULL
int(9223372036854775807)
int(9223372036854775807)
int(-9223372036854775808)
int(9223372036854775807)
int(-9223372036854775808)
int(-9223372036854775808)
int(9223372036854775807)
int(9223372036854775807)
int(9223372036854775806)
int(9223372036854775807)
int(9223372036854775806)
int(9223372036854775806)
